--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ PyPDF2
 fuzzywuzzy
 python-Levenshtein
 extract_msg
-/Users/arun.wagle@ibm.com/IBM/Demos/Watson/clients/EverestRe/submission-git/submission/dist/arunwagle_submission_intake_utils-0.0.1-py3-none-any.whl
+-e git+https://github.com/arunwagle/submission-git.git#egg=arunwagle_submission_intake_utils
