Modified all functions to be deployed to IBM cloud as docker image

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ PyPDF2
 fuzzywuzzy
 python-Levenshtein
 extract_msg
--e git+https://github.com/arunwagle/submission-git.git#egg=arunwagle_submission_intake_utils
+arunwagle-submission-intake-utils==1.0.6
