--- a/submission_docker/Dockerfile
+++ b/submission_docker/Dockerfile
@@ -14,5 +14,6 @@ RUN pip3 install  \
    python-Levenshtein \
    extract_msg \
    convertapi \
+   stringcase \
    arunwagle-submission-intake-utils==1.0.7
    
